--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "element-ui": "^2.15.0",
     "vue": "^2.5.2",
     "vue-echarts": "^6.0.0-rc.4",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
